[project]
name = "TapeAgents"
version = "0.1.2"
requires-python = ">= 3.10, <3.13"
description = "TapeAgents framework for building, tuning and evaluating LLM Agents"
authors = [
  { name = "Dzmitry Bahdanau" },
  { name = "Oleh Shliazhko" },
  { name = "Alexandre Piché" },
  { name = "Jordan Prince Tremblay" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "browsergym==0.13.0",
  "fastapi==0.115.5",
  "gradio==5.5.0",
  "hydra-core==1.3.2",
  "jsonref==1.1.0",
  "langchain-community==0.0.38",
  "langchain-core==0.1.52",
  "levenshtein==0.25.1",
  "litellm==1.51.2",
  "openai==1.55.3",
  "pathvalidate==3.2.0",
  "podman==5.0",
  "pydantic==2.9.1",
  "pyyaml==6.0.2",
  "tavily-python==0.3.4",
  "termcolor==2.4.0",
  "tqdm==4.66.5",
]

[project.urls]
"GitHub" = "https://github.com/ServiceNow/TapeAgents"

[dependency-groups]
dev = [
  "dspy-ai==2.4.10",
  "flake8==6.0.0",
  "ipykernel==6.29.5",
  "mkdocs==1.6.1",
  "mkdocs-gen-files==0.5.0",
  "mkdocs-git-revision-date-localized-plugin==1.3.0",
  "mkdocs-literate-nav==0.6.1",
  "mkdocs-material==9.5.46",
  "mkdocs-section-index==0.3.9",
  "mkdocstrings==0.27.0",
  "mkdocstrings-python==1.12.2",
  "nbconvert==7.16.4",
  "pytest==8.3.3",
  "ruff==0.6.6",
  "testbook==0.4.2",
  "tox>=4",
]

[project.optional-dependencies]
converters = [
  "beautifulsoup4==4.12.3",
  "easyocr==1.7.1",
  "ffmpeg-python==0.2.0",
  "lxml[html-clean]==5.2.2",
  "mammoth==1.8.0",
  "markdownify==0.13.1",
  "openai-whisper==20240930",
  "openpyxl==3.1.5",
  "pandas==2.2.2",
  "pdf2image==1.17.0",
  "pdfminer==20191125",
  "pdfminer-six==20240706",
  "puremagic==1.26",
  "pydub==0.25.1",
  "pyparsing==3.1.2",
  "python-pptx==0.6.23",
  "readability-lxml>=0.8.1",
  "webvtt-py==0.5.1",
  "xlrd==2.0.1",
  "youtube-transcript-api==0.6.2",
  "yt-dlp==2024.11.4",
]

# [project.scripts]
# ok = "ok.py"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.uv]
# default-groups = ["converters", "dev"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"
indent-width = 4

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "gpu: requires gpu",
  "multi_gpu: requires more than 1 gpu",
]
