[build-system]
requires = ["setuptools >= 67.6.1"]
build-backend = "setuptools.build_meta"

[project]
name = "TapeAgents"
version = "0.1.2"
requires-python = ">= 3.10"
description = "TapeAgents framework for building, tuning and evaluating LLM Agents"
authors = [
  { name = "Dzmitry Bahdanau" },
  { name = "Oleh Shliazhko" },
  { name = "Alexandre Piché" },
  { name = "Jordan Prince Tremblay" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: Apache Software License",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
"GitHub" = "https://github.com/ServiceNow/TapeAgents"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.converters = { file = ["requirements.converters.txt"] }
optional-dependencies.finetune = { file = ["requirements.finetune.txt"] }

[tool.setuptools.packages.find]
include = ["tapeagents*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = [
  "I",  # isort rules
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "gpu: requires gpu",
  "multi_gpu: requires more than 1 gpu",
]

[tool.tox]
min_version = "4"
requires = ["tox-uv>=1"]
env_list = ["type", "3.10", "3.11", "3.12", "3.13"]
skip_missing_interpreters = false

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = [
  "pytest>=8"
]
commands = [
  [
    "pytest",
    "-s",
    "--color=yes",
    "-m",
    "not slow",
    "tests/",
    "--ignore=tests/finetune/",
    "--ignore=tests/examples/",
  ],
]

[tool.tox.env.type]
description = "run type check on code base"
deps = [
  "mypy==1.11.2",
  "types-cachetools>=5.5.0.20240820",
  "types-chardet>=5.0.4.6",
]
commands = [["mypy", "tapeagents"]]
