[project]
name = "TapeAgents"
version = "0.1.5"
requires-python = ">= 3.10, <3.13"
description = "TapeAgents framework for building, tuning and evaluating LLM Agents"
authors = [
  { name = "Dzmitry Bahdanau" },
  { name = "Oleh Shliazhko" },
  { name = "Alexandre Piché" },
  { name = "Jordan Prince Tremblay" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "anthropic>=0.49.0",
  "browsergym~=0.13",
  "coverage>=7.6.12",
  "fastapi~=0.115",
  "gradio~=5.11",
  "hydra-core~=1.3",
  "jsonref~=1.1",
  "langchain-community~=0.3",
  "langchain-core~=0.1",
  "levenshtein~=0.25",
  "litellm~=1.61",
  "openai~=1.55",
  "pathvalidate~=3.2",
  "playwright~=1.42",
  "podman~=5.0",
  "pyautogui>=0.9.54",
  "pydantic~=2.9",
  "pytest-cov>=6.0.0",
  "pytest-xdist>=3.6.1",
  "pyyaml~=6.0",
  "streamlit>=1.42.0",
  "tavily-python~=0.3",
  "termcolor~=2.4",
  "tqdm~=4.66",
]

[project.urls]
"GitHub" = "https://github.com/ServiceNow/TapeAgents"

[dependency-groups]
dev = [
  "dspy-ai~=2.4",
  "ipykernel~=6.29",
  "mkdocs~=1.6",
  "mkdocs-gen-files~=0.5",
  "mkdocs-git-revision-date-localized-plugin~=1.3",
  "mkdocs-literate-nav~=0.6",
  "mkdocs-material~=9.5",
  "mkdocs-section-index~=0.3",
  "mkdocstrings~=0.27",
  "mkdocstrings-python~=1.12",
  "nbconvert~=7.16",
  "pip-audit>=2.7.3",
  "pytest~=8.3",
  "ruff~=0.6",
  "testbook~=0.4",
  "tox~=4.0",
]

[project.optional-dependencies]
converters = [
  "beautifulsoup4~=4.12",
  "easyocr~=1.7",
  "ffmpeg-python~=0.2",
  "lxml[html-clean]~=5.2",
  "mammoth~=1.8",
  "markdownify~=0.13",
  "openai-whisper>=20240930",
  "openpyxl~=3.1",
  "pandas~=2.2",
  "pdf2image~=1.17",
  "pdfminer-six>=20240706",
  "puremagic~=1.26",
  "pydub~=0.25",
  "pyparsing~=3.1",
  "python-pptx~=0.6",
  "readability-lxml>=0.8",
  "webvtt-py~=0.5",
  "xlrd~=2.0",
  "youtube-transcript-api~=0.6",
  "yt-dlp>=2024.12.13",
]
finetune = [
    "accelerate~=1.2.0",
    "datasets~=2.21",
    "deepspeed~=0.15.4",
    "numpy~=1.26",
    "peft~=0.12",
    "tokenizers~=0.20",
    "transformers~=4.45",
    "vllm~=0.6.6.post1",
    "wandb~=0.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
  "examples/rl_gsm8k/deepseek_math_eval/"
]

[tool.ruff.lint]
extend-select = [
  "I",  # isort rules
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "gpu: requires gpu",
  "multi_gpu: requires more than 1 gpu",
]

[tool.tox]
min_version = "4"
requires = ["tox-uv>=1"]
env_list = ["type", "3.10", "3.11", "3.12", "3.13"]
skip_missing_interpreters = false

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = [
  "pytest>=8"
]
commands = [
  [
    "pytest",
    "-s",
    "--color=yes",
    "-m",
    "not slow",
    "tests/",
    "--ignore=tests/finetune/",
    "--ignore=tests/examples/",
  ],
]

[tool.tox.env.type]
description = "run type check on code base"
deps = [
  "mypy==1.11.2",
  "types-cachetools>=5.5.0.20240820",
  "types-chardet>=5.0.4.6",
]
commands = [["mypy", "tapeagents"]]

[tool.coverage.run]
dynamic_context = "test_function"
